--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "recipe-calculator",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://theo-huret.github.io/Recipe-Calculator/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +15,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
